@@ -3,3 +3,4 @@ Gary Cramblitt <garycramblitt@comcast.net>
 Gunnar Schmi Dt <gunnar@schmi-dt.de>
 Olaf Schmidt <ojschmidt@kde.org>
 Paul Giannaros <ceruleanblaze@gmail.com>
+Jeremy Whiting <jpwhiting@kde.org>
